第一个测试版本

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
-# AI API 配置
-OPENAI_API_KEY=your_openai_api_key_here
-# ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# AI API 配置（阿里云通义千问）
+AI_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+AI_API_KEY=sk-14a2a30d135148dcaef8a673a21af02a
+AI_MODEL=qwen-long
 
 # 服务器配置
 SERVER_HOST=127.0.0.1
@@ -9,3 +10,4 @@ SERVER_PORT=8000
 # 文件路径配置
 UPLOAD_DIR=temp/uploads
 OUTPUT_DIR=temp/outputs
+CACHE_DIR=temp/cache
