--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@mermaid-js/mermaid-cli": "^11.4.1",
+    "axios": "^1.7.9",
     "electron-updater": "^6.3.9"
   },
   "devDependencies": {
@@ -35,7 +37,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
-    "electron": "^38.1.2",
+    "electron": "^38.2.2",
     "electron-builder": "^25.1.8",
     "electron-vite": "^4.0.1",
     "eslint": "^9.36.0",
