--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,18 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
 
+      - name: Cache Electron binaries
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/electron
+            ~/.cache/electron-builder
+            ~/Library/Caches/electron
+            ~/Library/Caches/electron-builder
+          key: ${{ runner.os }}-electron-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-electron-
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -74,7 +86,8 @@ jobs:
           uv run build.py
 
       - name: Install frontend deps
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
+        timeout-minutes: 20
 
       - name: Build frontend
         run: npm run build
