优化 PyInstaller 打包速度
- CI 环境使用 --onedir 模式（比 --onefile 快 3-5 倍）
- 排除更多不需要的模块（numpy, PIL）
- 为 backend 构建添加 30 分钟超时

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,9 @@ jobs:
 
       - name: Build backend (PyInstaller)
         shell: bash
+        timeout-minutes: 30
+        env:
+          PYINSTALLER_ONEDIR: "true"
         run: |
           cd backend
           uv run build.py
