--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build:backend && npm run build && electron-builder --win",
-    "build:mac": "npm run build:backend && npm run build && electron-builder --mac",
+    "build:mac": "npm run build:backend && npm run build && electron-builder --mac --arm64",
     "build:linux": "npm run build:backend && npm run build && electron-builder --linux"
   },
   "dependencies": {
