--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "openai>=2.2.0",
     "pandas>=2.3.3",
+    "sqlalchemy>=2.0.43",
+    "passlib[bcrypt]>=1.7.4",
+    "python-jose[cryptography]>=3.3.0",
+    "bcrypt==4.2.1",
 ]
 
 [project.optional-dependencies]
